<resources>
    <string name="app_name">Degree of Burn</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="landing_long_text">Nikmati pendekatan modern yang revolusioner untuk mengidentifikasi tingkat keparahan luka bakar secara cepat dan akurat.</string>
    <string name="landing_big_text">Modern Way to
        Classify
        Burn Wound</string>
    <string name="subtitle_landing">Nikmati pendekatan modern yang revolusioner untuk mengidentifikasi tingkat keparahan luka bakar secara cepat dan akurat.</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="title_landing">Modern Way to\nClassify Burn\nWound</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text_fragment">Masuk dengan\nakun Anda</string>
    <string name="login_desc">Masuk menggunakan akun terdaftar</string>
    <string name="login_button">Masuk</string>
    <string name="password">Password</string>
    <string name="email_no_hp">Email</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun_daftar_di_sini">Belum punya akun?</string>
    <string name="title_activity_test">Test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="buat_akun_baru">Buat\nAkun Baru</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="token">Token</string>
    <string name="token_hint">*Token didapatkan dengan menghubungi admin yang bertugas</string>
    <string name="daftar">Daftar</string>
    <string name="eula"><![CDATA[Dengan melanjutkan, Anda menyetujui Syarat & Ketentuan kami]]></string>
    <string name="nama">Nama</string>
    <string name="hint_phone">08XXXXXXXXXX</string>
    <string name="xxxx">XXXX</string>
    <string name="riwayat_tindakan">Riwayat Tindakan</string>
    <string name="search_icon">Search Icon</string>
    <string name="cari_riwayat_pasien">Cari riwayat pasien...</string>
    <string name="clear_search">Clear Search</string>
    <string name="back">back</string>
    <string name="apakah_gambar_luka_sudah_tepat">Apakah Gambar Luka Sudah Tepat?</string>
    <string name="gambar_luka">Gambar Luka</string>
    <string name="pastikan_gambar_menunjukkan_area_luka_dengan_jelas_sebelum_melanjutkan">*Pastikan gambar menunjukkan area luka dengan jelas sebelum melanjutkan.</string>
    <string name="ambil_ulang">Ambil Ulang</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="jika_gambar_kurang_jelas_n_silakan_ambil_ulang">*Jika gambar kurang jelas,\n silakan ambil ulang</string>
    <string name="preview_gambar_luka">Preview gambar luka</string>
    <string name="tutup">Tutup</string>
    <string name="informasi_medis">Informasi Medis</string>
    <string name="petugas">Petugas :</string>
    <string name="titik_banyak">..... .......</string>
    <string name="tanggal">Tanggal</string>
    <string name="_01_01_0001">01/01/0001</string>
    <string name="nama_pasien">Nama Pasien</string>
    <string name="nama_pasien_1">Nama Pasien</string>
    <string name="xx">xx</string>
    <string name="kg">kg</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="xxx">xxx</string>
    <string name="cm">cm</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pilih_jenis_kelamin">Pilih Jenis Kelamin</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="pilih_golongan_darah">Pilih Golongan Darah</string>
    <string name="umur">Umur</string>
    <string name="tahun">tahun</string>
    <string name="golongan_darah">Golongan Darah</string>
    <string name="distribusi_presentase_luka_bakar">Distribusi Presentase Luka Bakar</string>
    <string name="dada_perut_n_punggung">Dada-Perut/\n Punggung</string>
    <string name="kepala">Kepala</string>
    <string name="lengan">Lengan</string>
    <string name="genital">Genital</string>
    <string name="kaki">Kaki</string>
    <string name="telapak_ntangan">Telapak\nTangan</string>
    <string name="petugas2">Petugas :</string>
    <string name="titik_banyak_2">....... ...............</string>
    <string name="pasien_baru">Pasien Baru</string>
    <string name="isi_data_lengkap_pasien_pada_form_ini">Isi Data Lengkap Pasien pada Form Ini</string>
    <string name="nama_pasien_baru">Nama Pasien Baru</string>
    <string name="jenis_kelamin_pasien">Jenis Kelamin Pasien</string>
    <string name="umur_pasien">Umur Pasien</string>
    <string name="golongan_darah_pasien">Golongan Darah Pasien</string>
    <string name="pilih_gol_darah">Pilih Gol. Darah</string>
    <string name="tinggi_badan_pasien">Tinggi Badan Pasien</string>
    <string name="berat_badan_pasien">Berat Badan Pasien</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="selamat_datang">Selamat datang,</string>
    <string name="tambahkan_npasien_npenderita_nluka_nbakar">Tambahkan\nPasien\nPenderita\nLuka\nBakar</string>
    <string name="tambah_pasien">Tambah Pasien</string>
    <string name="arrow">arrow</string>
    <string name="klik_disini">Klik disini</string>
    <string name="data_pasien">Data Pasien</string>
    <string name="jumlah_pasien_nhari_ini">Jumlah Pasien\nHari Ini</string>
    <string name="titik_tiga">...</string>
    <string name="jumlah_pasien_total">Jumlah Pasien Total</string>
    <string name="riwayat">Riwayat</string>
    <string name="beranda">Beranda</string>
    <string name="profil">Profil</string>
    <string name="no_internet">no internet</string>
    <string name="internet_ntidak_terhubung">Internet\nTidak Terhubung</string>
    <string name="tarik_ke_bawah_untuk_mencoba_lagi">Tarik ke Bawah Untuk Mencoba Lagi</string>
    <string name="pasien_lama">Pasien Lama</string>
    <string name="divider_menu">divider menu</string>
    <string name="profil_anda">Profil Anda</string>
    <string name="icon_profil">icon profil</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="logout">Logout</string>
    <string name="pasien_nditangani">Pasien\nDitangani</string>
    <string name="titik_banyak_nospace">...............................</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_hp">No. HP</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="email">Email</string>
    <string name="emailanda_xx_xx">emailanda@xx.xx</string>
    <string name="hasil_nscanning_nluka">Hasil\nScanning\nLuka</string>
    <string name="tanggal_tindakan">Tanggal Tindakan</string>
    <string name="titik_tanggal">.../.../.....</string>
    <string name="nama_t2">Nama :</string>
    <string name="berat_badan_t2">Berat Badan :</string>
    <string name="tinggi_badan_t2">Tinggi Badan :</string>
    <string name="umur_t2">Umur :</string>
    <string name="golongan_darah_t2">Golongan Darah :</string>
    <string name="degree">DEGREE</string>
    <string name="persentase">PERSENTASE</string>
    <string name="persen_titik">..%</string>
    <string name="kebutuhan_ncairan">KEBUTUHAN\nCAIRAN</string>
    <string name="nml">.....\nML</string>
    <string name="data_yang_dihasilkan_hanya_digunakan_sebagai_data_pendukung_tindakan_medis_selanjutnya">*Data yang dihasilkan hanya digunakan sebagai data pendukung tindakan medis selanjutnya</string>
    <string name="degree_of_burn">Degree Of Burn</string>
    <string name="v1_0">v1.0</string>
    <string name="enter_the_6_digit_otp_code">Enter the 6-digit OTP code</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="daftar_di_sini">Daftar di sini</string>
    <string name="nama_pasien_t2">Nama Pasien :</string>
    <string name="pasien">Pasien</string>
    <string name="nama_petugas_xxxxxx">Nama Petugas xxxxxx</string>
</resources>