<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg_general_gradient_act"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:elevation="4dp"
        android:padding="24dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteX="43dp">

        <ImageButton
            android:id="@+id/btnBackEditProfile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back" />


        <TextView
            android:id="@+id/tvTitleProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil_anda"
            android:textColor="@color/blue_start"
            style="@style/Txt30PoppinsBold"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="19dp" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/icProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:srcCompat="@drawable/ic_profile"
        android:contentDescription="@string/icon_profil" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_btn_gradient"
        android:text="@string/simpan_perubahan"
        android:textAllCaps="false"
        android:textAppearance="@style/Txt115AbuLatoReg"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tvNameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/nama_lengkap"
        style="@style/Txt115LatoBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icProfilePic" />

    <EditText
        android:id="@+id/inputNameEdit"
        android:layout_width="250dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_edittext"
        android:padding="10dp"
        android:singleLine="true"
        android:inputType="text"
        android:textAppearance="@style/Txt115AbuLatoReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNameProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvNameProfile"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvNoHPProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/no_hp"
        style="@style/Txt115LatoBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNameProfile"
        app:layout_constraintTop_toBottomOf="@+id/inputNameEdit" />

    <EditText
        android:id="@+id/inputNoHPEdit"
        android:layout_width="250dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_edittext"
        android:padding="10dp"
        android:inputType="phone"
        android:textAppearance="@style/Txt115AbuLatoReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNoHPProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvNoHPProfile"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/tvEmailProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/password_lama"
        style="@style/Txt115LatoBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNoHPProfile"
        app:layout_constraintTop_toBottomOf="@+id/inputNoHPEdit" />

    <EditText
        android:id="@+id/inputOldPasswordEdit"
        android:layout_width="250dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_edittext"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textAppearance="@style/Txt115AbuLatoReg"
        android:drawableEnd="@drawable/ic_eye"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvEmailProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailProfile"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvNewPasswordEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/password_baru"
        style="@style/Txt115LatoBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvEmailProfile"
        app:layout_constraintTop_toBottomOf="@+id/inputOldPasswordEdit" />

    <EditText
        android:id="@+id/inputNewPasswordEdit"
        android:layout_width="250dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_edittext"
        android:padding="10dp"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_eye"
        android:textAppearance="@style/Txt115AbuLatoReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNewPasswordEdit"
        app:layout_constraintTop_toBottomOf="@+id/tvNewPasswordEdit" />


    <TextView
        android:id="@+id/tvCountPatients"
        style="@style/Txt115LatoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/konfirmasi_password_baru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputNewPasswordEdit"
        app:layout_constraintTop_toBottomOf="@+id/inputNewPasswordEdit" />


    <EditText
        android:id="@+id/inputConfirmPasswordEdit"
        android:layout_width="250dp"
        android:layout_height="32dp"
        android:background="@drawable/bg_edittext"
        android:drawableEnd="@drawable/ic_eye"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAppearance="@style/Txt115AbuLatoReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNewPasswordEdit"
        app:layout_constraintTop_toBottomOf="@+id/tvCountPatients" />

    <View
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>