<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg_prfl_act"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:elevation="4dp"
        android:padding="24dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnBackProfile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="@+id/tvTitleProfile"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/back" />

            <TextView
                android:id="@+id/tvTitleProfile"
                style="@style/Txt30PoppinsBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/profil_anda"
                android:textColor="@color/blue_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/btnBackProfile"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvTitleProfile"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:id="@+id/icProfilePic"
        android:layout_width="229dp"
        android:layout_height="238dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:srcCompat="@drawable/ic_profile_pic"
        android:contentDescription="@string/icon_profil" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/bg_btn_gradient_editprf"
        android:text="@string/edit_profil"
        android:textAllCaps="false"
        android:textAppearance="@style/Txt115AbuLatoReg"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout5"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/bg_btn_gradient_logout"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textAppearance="@style/Txt115AbuLatoReg"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:background="@drawable/bg_rect_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailProfile"
        app:layout_constraintVertical_bias="0.118">


        <TextView
            android:id="@+id/tvCountPatients"
            style="@style/Txt48PoppinsBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/titik_tiga"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvNewPasswordEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toEndOf="@+id/tvNewPasswordEdit"
            app:layout_constraintTop_toTopOf="@+id/tvNewPasswordEdit" />

        <TextView
            android:id="@+id/tvNewPasswordEdit"
            style="@style/Txt30LatoBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/pasien_nditangani"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvNameProfile"
        style="@style/Txt30PoppinsBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textColor="@color/blue_start"
        android:text="@string/titik_tiga"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icProfilePic" />

    <TextView
        android:id="@+id/tvNoHPProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        style="@style/Txt115LatoBold"
        android:text="@string/titik_banyak_nospace"
        android:textColor="@color/blue_start"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout5"
        app:layout_constraintTop_toBottomOf="@+id/tvNameProfile" />

    <TextView
        android:id="@+id/tvEmailProfile"
        style="@style/Txt115LatoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_start"
        android:text="@string/titik_banyak_nospace"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout5"
        app:layout_constraintTop_toTopOf="@+id/tvNoHPProfile" />

    <View
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ProgressBar -->

</androidx.constraintlayout.widget.ConstraintLayout>