<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:paddingTop="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_curved"
        >

        <!-- Teks Judul -->

        <!-- Subjudul -->

        <!-- Input Email/No. HP -->

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTitle"
            style="@style/Txt30PoppinsBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageLogo"
            android:layout_marginHorizontal="65dp"
            android:gravity="start"
            android:text="@string/login_text_fragment"
            android:textColor="#004AAD"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

        <TextView
            android:id="@+id/textSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitle"
            android:layout_marginHorizontal="65dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:text="@string/login_desc"
            android:textColor="@color/abu_abu_landing"
            android:textSize="11.5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.418"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitle" />

        <TextView
            android:id="@+id/textEmail"
            style="@style/Txt115AbuLatoReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textSubtitle"
            android:layout_marginHorizontal="65dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="Email/No. HP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSubtitle" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textEmail"
            android:layout_marginHorizontal="65dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email_no_hp"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAppearance="@style/Txt115AbuLato"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmail" />

        <!-- Input Password -->

        <!-- Link Lupa Password -->

        <!-- Tombol Masuk -->

        <!-- Link Daftar -->

        <TextView
            android:id="@+id/textPassword"
            style="@style/Txt115AbuLatoReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editEmail"
            android:layout_marginHorizontal="65dp"
            android:gravity="center"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail"
            app:layout_constraintVertical_bias="0.051" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textPassword"
            android:layout_marginHorizontal="65dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext_background"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAppearance="@style/Txt115AbuLato"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword" />

        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editPassword"
            android:layout_marginTop="12dp"
            android:text="@string/lupa_password"
            android:textColor="#004AAD"
            android:textSize="11.5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.219"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPassword" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textForgotPassword"
            android:layout_marginHorizontal="65dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#004AAD"
            android:padding="12dp"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textForgotPassword" />

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonLogin"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/belum_punya_akun_daftar_di_sini"
            android:textColor="#666666"
            android:textSize="11.5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            app:layout_constraintVertical_bias="0.035" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
